--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +7,6 @@
     <title>Git</title>
 </head>
 <body>
-    
+    <h1>Projeto</h1>
 </body>
 </html>
